# vscode-remote-try-libcst

./: .gitignore  .libcst.codemod.yaml  .pre-commit-config.yaml  .yamllint.yml  README.md  biome.json  flake.nix  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml
ponko2/codemod/commands/: constant_folding.py
ponko2/codemod/commands/tests/: test_constant_folding.py
